# BespokeSynth

./: .gitmodules  CMakeLists.txt
BespokeVSTScanner/: CMakeLists.txt  Main.cpp
Source/: CMakeLists.txt  Main.cpp  MainComponent.cpp  ModularSynth.cpp  OpenFrameworksPort.cpp  Push2Control.cpp  Sample.cpp  Sample.h  UserPrefs.h  UserPrefsEditor.cpp  VSTPlayhead.cpp
libs/: CMakeLists.txt
libs/fftw3/: CMakeLists.txt
libs/r8brain/: CMakeLists.txt
