cmake_minimum_required(VERSION 3.15)
cmake_policy(SET CMP0091 NEW)
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
set(CMAKE_OSX_DEPLOYMENT_TARGET 10.11 CACHE STRING "Minimum macOS version")
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
endif()

if(NOT BUILD_TESTING)
  option(BUILD_TESTING "" OFF)
endif()

project(BespokeSynth VERSION 0.9.0 LANGUAGES C CXX ASM)

if(NOT JUCE_LOCATION)
  set(JUCE_LOCATION "libs/JUCE" CACHE STRING "" FORCE)
endif()

add_subdirectory(${JUCE_LOCATION} ${CMAKE_BINARY_DIR}/JUCE EXCLUDE_FROM_ALL)

set(SOURCE_LIST
        Source/exprtk/exprtk.hpp
        Source/freeverb/allpass.cpp
        Source/freeverb/allpass.hpp
        Source/freeverb/comb.cpp
        Source/freeverb/comb.hpp
        Source/freeverb/denormals.h
        Source/freeverb/revmodel.cpp
        Source/freeverb/revmodel.hpp
        Source/freeverb/tuning.h
        Source/glew/include/GL/glew.c
        Source/glew/include/GL/glew.h
        Source/glew/include/GL/wglew.h
        Source/glew/Bespoke_glew.c
        Source/json/include/json/autolink.h
        Source/json/include/json/config.h
        Source/json/include/json/features.h
        Source/json/include/json/forwards.h
        Source/json/include/json/json.h
        Source/json/include/json/reader.h
        Source/json/include/json/value.h
        Source/json/include/json/writer.h
        Source/json/src/lib_json/json_batchallocator.h
        Source/json/src/lib_json/json_internalarray.inl
        Source/json/src/lib_json/json_internalmap.inl
        Source/json/src/lib_json/json_reader.cpp
        Source/json/src/lib_json/json_value.cpp
        Source/json/src/lib_json/json_valueiterator.inl
        Source/json/src/lib_json/json_writer.cpp
        Source/json/src/lib_json/sconscript
        Source/json/README.txt
        Source/json/version
        Source/leathers/all
        Source/leathers/arc-bridge-casts-disallowed-in-nonarc
        Source/leathers/arc-repeated-use-of-weak
        Source/leathers/assign-base-inaccessible
        Source/leathers/assign-could-not-be-generated
        Source/leathers/assignment-within-conditional
        Source/leathers/automatic-inline
        Source/leathers/behavior-change
        Source/leathers/bool-conversion
        Source/leathers/c++11-extensions
        Source/leathers/c++98-compat
        Source/leathers/c++98-compat-pedantic
        Source/leathers/cast-align
        Source/leathers/catch-semantic-changed
        Source/leathers/compatibility-c++98
        Source/leathers/conditional-uninitialized
        Source/leathers/constant-conditional
        Source/leathers/constant-conversion
        Source/leathers/conversion
        Source/leathers/conversion-loss
        Source/leathers/conversion-sign-extended
        Source/leathers/copy-ctor-could-not-be-generated
        Source/leathers/covered-switch-default
        Source/leathers/deprecated
        Source/leathers/deprecated-declarations
        Source/leathers/deprecated-implementations
        Source/leathers/deprecated-objc-isa-usage
        Source/leathers/deprecated-register
        Source/leathers/dflt-ctor-base-inaccessible
        Source/leathers/dflt-ctor-could-not-be-generated
        Source/leathers/digraphs-not-supported
        Source/leathers/disabled-macro-expansion
        Source/leathers/documentation
        Source/leathers/documentation-unknown-command
        Source/leathers/duplicate-method-match
        Source/leathers/empty-body
        Source/leathers/enum-conversion
        Source/leathers/exit-time-destructors
        Source/leathers/explicit-ownership-type
        Source/leathers/extra-semi
        Source/leathers/force-not-inlined
        Source/leathers/format
        Source/leathers/four-char-constants
        Source/leathers/global-constructors
        Source/leathers/ill-formed-comma-expr
        Source/leathers/implicit-atomic-properties
        Source/leathers/implicit-fallthrough
        Source/leathers/implicit-retain-self
        Source/leathers/inherits-via-dominance
        Source/leathers/inline
        Source/leathers/int-conversion
        Source/leathers/invalid-offsetof
        Source/leathers/is-defined-to-be
        Source/leathers/layout-changed
        Source/leathers/missing-braces
        Source/leathers/missing-field-initializers
        Source/leathers/missing-noreturn
        Source/leathers/missing-prototypes
        Source/leathers/name-length-exceeded
        Source/leathers/narrowing
        Source/leathers/newline-eof
        Source/leathers/no-such-warning
        Source/leathers/non-virtual-dtor
        Source/leathers/not-inlined
        Source/leathers/objc-missing-property-synthesis
        Source/leathers/objc-root-class
        Source/leathers/object-layout-change
        Source/leathers/old-style-cast
        Source/leathers/overloaded-virtual
        Source/leathers/padded
        Source/leathers/parentheses
        Source/leathers/pedantic
        Source/leathers/pointer-sign
        Source/leathers/pop
        Source/leathers/protocol
        Source/leathers/push
        Source/leathers/range-loop-analysis
        Source/leathers/receiver-is-weak
        Source/leathers/return-type
        Source/leathers/selector
        Source/leathers/shadow
        Source/leathers/shift-sign-overflow
        Source/leathers/shorten-64-to-32
        Source/leathers/sign-compare
        Source/leathers/sign-conversion
        Source/leathers/signed-unsigned-compare
        Source/leathers/special-members
        Source/leathers/static-ctor-not-thread-safe
        Source/leathers/strict-selector-match
        Source/leathers/sugar.cmake
        Source/leathers/switch
        Source/leathers/switch-enum
        Source/leathers/this-used-in-init
        Source/leathers/undeclared-selector
        Source/leathers/undef
        Source/leathers/uninitialized
        Source/leathers/unknown-pragmas
        Source/leathers/unreachable-code
        Source/leathers/unreachable-code-return
        Source/leathers/unreferenced-inline
        Source/leathers/unsafe-conversion
        Source/leathers/unused-but-set-variable
        Source/leathers/unused-function
        Source/leathers/unused-label
        Source/leathers/unused-parameter
        Source/leathers/unused-value
        Source/leathers/unused-variable
        Source/leathers/used-but-marked-unused
        Source/leathers/user-ctor-required
        Source/leathers/weak-vtables
        Source/nanovg/fontstash.h
        Source/nanovg/nanovg.c
        Source/nanovg/nanovg.h
        Source/nanovg/nanovg_gl.h
        Source/nanovg/nanovg_gl_utils.h
        Source/nanovg/stb_image.h
        Source/nanovg/stb_truetype.h
        Source/push2/libusb/config.h
        Source/push2/libusb/config_msvc.h
        Source/push2/libusb/config_xcode.h
        Source/push2/push2/JuceToPush2DisplayBridge.cpp
        Source/push2/push2/JuceToPush2DisplayBridge.h
        Source/push2/libusb/libusb_platform_wrapper.c
        Source/push2/push2/Push2-Bitmap.h
        Source/push2/push2/Push2-Display.h
        Source/push2/push2/Push2-Usb-Communicator.cpp
        Source/push2/push2/Push2-UsbCommunicator.h
        Source/push2/Result.cpp
        Source/push2/Result.h
        Source/pybind11/detail/class.h
        Source/pybind11/detail/common.h
        Source/pybind11/detail/descr.h
        Source/pybind11/detail/init.h
        Source/pybind11/detail/internals.h
        Source/pybind11/detail/typeid.h
        Source/pybind11/attr.h
        Source/pybind11/buffer_info.h
        Source/pybind11/cast.h
        Source/pybind11/chrono.h
        Source/pybind11/common.h
        Source/pybind11/complex.h
        Source/pybind11/eigen.h
        Source/pybind11/embed.h
        Source/pybind11/eval.h
        Source/pybind11/functional.h
        Source/pybind11/iostream.h
        Source/pybind11/numpy.h
        Source/pybind11/operators.h
        Source/pybind11/options.h
        Source/pybind11/pybind11.h
        Source/pybind11/pytypes.h
        Source/pybind11/stl.h
        Source/pybind11/stl_bind.h
        Source/vinylcontrol/timecoder.c
        Source/vinylcontrol/timecoder.h
        Source/vinylcontrol/vinylcontrol.cpp
        Source/vinylcontrol/vinylcontrol.h
        Source/PerlinNoise.cpp
        Source/PerlinNoise.h
        Source/BitcrushEffect.cpp
        Source/BitcrushEffect.h
        Source/ButterworthFilterEffect.cpp
        Source/ButterworthFilterEffect.h
        Source/Compressor.cpp
        Source/Compressor.h
        Source/DCRemoverEffect.cpp
        Source/DCRemoverEffect.h
        Source/DelayEffect.cpp
        Source/DelayEffect.h
        Source/DistortionEffect.cpp
        Source/DistortionEffect.h
        Source/EQEffect.cpp
        Source/EQEffect.h
        Source/FormantFilterEffect.cpp
        Source/FormantFilterEffect.h
        Source/FreeverbEffect.cpp
        Source/FreeverbEffect.h
        Source/GainStageEffect.cpp
        Source/GainStageEffect.h
        Source/GateEffect.cpp
        Source/GateEffect.h
        Source/LiveGranulator.cpp
        Source/LiveGranulator.h
        Source/Muter.cpp
        Source/Muter.h
        Source/NoiseEffect.cpp
        Source/NoiseEffect.h
        Source/PitchShiftEffect.cpp
        Source/PitchShiftEffect.h
        Source/Pumper.cpp
        Source/Pumper.h
        Source/Stutter.cpp
        Source/Stutter.h
        Source/TremoloEffect.cpp
        Source/TremoloEffect.h
        Source/Amplifier.cpp
        Source/Amplifier.h
        Source/Arpeggiator.cpp
        Source/Arpeggiator.h
        Source/AudioLevelToCV.cpp
        Source/AudioLevelToCV.h
        Source/AudioMeter.cpp
        Source/AudioMeter.h
        Source/AudioRouter.cpp
        Source/AudioRouter.h
        Source/AudioSend.cpp
        Source/AudioSend.h
        Source/AudioToCV.cpp
        Source/AudioToCV.h
        Source/AudioToPulse.cpp
        Source/AudioToPulse.h
        Source/Autotalent.cpp
        Source/Autotalent.h
        Source/BandVocoder.cpp
        Source/BandVocoder.h
        Source/BeatBloks.cpp
        Source/BeatBloks.h
        Source/Beats.cpp
        Source/Beats.h
        Source/BiquadFilterEffect.cpp
        Source/BiquadFilterEffect.h
        Source/Capo.cpp
        Source/Capo.h
        Source/ChaosEngine.cpp
        Source/ChaosEngine.h
        Source/ChordDisplayer.cpp
        Source/ChordDisplayer.h
        Source/Chorder.cpp
        Source/Chorder.h
        Source/ChordHolder.cpp
        Source/ChordHolder.h
        Source/CircleSequencer.cpp
        Source/CircleSequencer.h
        Source/ClipArranger.cpp
        Source/ClipArranger.h
        Source/ClipLauncher.cpp
        Source/ClipLauncher.h
        Source/ComboGridController.cpp
        Source/ComboGridController.h
        Source/CommentDisplay.cpp
        Source/CommentDisplay.h
        Source/ControllingSong.cpp
        Source/ControllingSong.h
        Source/ControlSequencer.cpp
        Source/ControlSequencer.h
        Source/ControlTactileFeedback.cpp
        Source/ControlTactileFeedback.h
        Source/CurveLooper.cpp
        Source/CurveLooper.h
        Source/DCOffset.cpp
        Source/DCOffset.h
        Source/DebugAudioSource.cpp
        Source/DebugAudioSource.h
        Source/DrumPlayer.cpp
        Source/DrumPlayer.h
        Source/DrumSynth.cpp
        Source/DrumSynth.h
        Source/EffectChain.cpp
        Source/EffectChain.h
        Source/EnvelopeModulator.cpp
        Source/EnvelopeModulator.h
        Source/EQModule.cpp
        Source/EQModule.h
        Source/EventCanvas.cpp
        Source/EventCanvas.h
        Source/FeedbackModule.cpp
        Source/FeedbackModule.h
        Source/FFTtoAdditive.cpp
        Source/FFTtoAdditive.h
        Source/FMSynth.cpp
        Source/FMSynth.h
        Source/FollowingSong.cpp
        Source/FollowingSong.h
        Source/FourOnTheFloor.cpp
        Source/FourOnTheFloor.h
        Source/FreqDelay.cpp
        Source/FreqDelay.h
        Source/FreqDomainBoilerplate.cpp
        Source/FreqDomainBoilerplate.h
        Source/FubbleModule.cpp
        Source/FubbleModule.h
        Source/GlobalControls.cpp
        Source/GlobalControls.h
        Source/GridController.cpp
        Source/GridController.h
        Source/GridModule.cpp
        Source/GridModule.h
        Source/GridSliders.cpp
        Source/GridSliders.h
        Source/GroupControl.cpp
        Source/GroupControl.h
        Source/HelpDisplay.cpp
        Source/HelpDisplay.h
        Source/InputChannel.cpp
        Source/InputChannel.h
        Source/Inverter.cpp
        Source/Inverter.h
        Source/KarplusStrong.cpp
        Source/KarplusStrong.h
        Source/KeyboardDisplay.cpp
        Source/KeyboardDisplay.h
        Source/Kicker.cpp
        Source/Kicker.h
        Source/LaunchpadKeyboard.cpp
        Source/LaunchpadKeyboard.h
        Source/LaunchpadNoteDisplayer.cpp
        Source/LaunchpadNoteDisplayer.h
        Source/LFOController.cpp
        Source/LFOController.h
        Source/LinnstrumentControl.cpp
        Source/LinnstrumentControl.h
        Source/Lissajous.cpp
        Source/Lissajous.h
        Source/LockFreeQueue.h
        Source/Looper.cpp
        Source/Looper.h
        Source/LooperGranulator.cpp
        Source/LooperGranulator.h
        Source/LooperRecorder.cpp
        Source/LooperRecorder.h
        Source/LoopStorer.cpp
        Source/LoopStorer.h
        Source/MacroSlider.cpp
        Source/MacroSlider.h
        Source/Metronome.cpp
        Source/Metronome.h
        Source/MidiCapturer.cpp
        Source/MidiCapturer.h
        Source/MidiControlChange.cpp
        Source/MidiControlChange.h
        Source/MidiController.cpp
        Source/MidiController.h
        Source/MidiOutput.cpp
        Source/MidiOutput.h
        Source/ModulationVisualizer.cpp
        Source/ModulationVisualizer.h
        Source/ModulatorAccum.cpp
        Source/ModulatorAccum.h
        Source/ModulatorAdd.cpp
        Source/ModulatorAdd.h
        Source/ModulatorAddCentered.cpp
        Source/ModulatorAddCentered.h
        Source/ModulatorCurve.cpp
        Source/ModulatorCurve.h
        Source/ModulatorExpression.cpp
        Source/ModulatorExpression.h
        Source/ModulatorGravity.cpp
        Source/ModulatorGravity.h
        Source/ModulatorMult.cpp
        Source/ModulatorMult.h
        Source/ModulatorSmoother.cpp
        Source/ModulatorSmoother.h
        Source/ModulatorSubtract.cpp
        Source/ModulatorSubtract.h
        Source/ModuleSaveDataPanel.cpp
        Source/ModuleSaveDataPanel.h
        Source/ModWheel.cpp
        Source/ModWheel.h
        Source/ModWheelToCV.cpp
        Source/ModWheelToCV.h
        Source/ModwheelToPressure.cpp
        Source/ModwheelToPressure.h
        Source/ModwheelToVibrato.cpp
        Source/ModwheelToVibrato.h
        Source/Monophonify.cpp
        Source/Monophonify.h
        Source/MPESmoother.cpp
        Source/MPESmoother.h
        Source/MPETweaker.cpp
        Source/MPETweaker.h
        Source/MultibandCompressor.cpp
        Source/MultibandCompressor.h
        Source/MultitapDelay.cpp
        Source/MultitapDelay.h
        Source/MultitrackRecorder.cpp
        Source/MultitrackRecorder.h
        Source/Neighborhooder.cpp
        Source/Neighborhooder.h
        Source/NoteCanvas.cpp
        Source/NoteCanvas.h
        Source/NoteChainNode.cpp
        Source/NoteChainNode.h
        Source/NoteChance.cpp
        Source/NoteChance.h
        Source/NoteCounter.cpp
        Source/NoteCounter.h
        Source/NoteCreator.cpp
        Source/NoteCreator.h
        Source/NoteDelayer.cpp
        Source/NoteDelayer.h
        Source/NoteDisplayer.cpp
        Source/NoteDisplayer.h
        Source/NoteFilter.cpp
        Source/NoteFilter.h
        Source/NoteFlusher.cpp
        Source/NoteFlusher.h
        Source/NoteGate.cpp
        Source/NoteGate.h
        Source/NoteHocket.cpp
        Source/NoteHocket.h
        Source/NoteHumanizer.cpp
        Source/NoteHumanizer.h
        Source/NoteLatch.cpp
        Source/NoteLatch.h
        Source/NoteLooper.cpp
        Source/NoteLooper.h
        Source/NoteOctaver.cpp
        Source/NoteOctaver.h
        Source/NotePanAlternator.cpp
        Source/NotePanAlternator.h
        Source/NotePanner.cpp
        Source/NotePanner.h
        Source/NotePanRandom.cpp
        Source/NotePanRandom.h
        Source/NoteQuantizer.cpp
        Source/NoteQuantizer.h
        Source/NoteRangeFilter.cpp
        Source/NoteRangeFilter.h
        Source/NoteRatchet.cpp
        Source/NoteRatchet.h
        Source/NoteRouter.cpp
        Source/NoteRouter.h
        Source/NoteSinger.cpp
        Source/NoteSinger.h
        Source/NoteSorter.cpp
        Source/NoteSorter.h
        Source/NoteStepper.cpp
        Source/NoteStepper.h
        Source/NoteStepSequencer.cpp
        Source/NoteStepSequencer.h
        Source/NoteStreamDisplay.cpp
        Source/NoteStreamDisplay.h
        Source/NoteStrummer.cpp
        Source/NoteStrummer.h
        Source/NoteSustain.cpp
        Source/NoteSustain.h
        Source/NoteToFreq.cpp
        Source/NoteToFreq.h
        Source/NoteToMs.cpp
        Source/NoteToMs.h
        Source/NoteToPulse.cpp
        Source/NoteToPulse.h
        Source/NoteTransformer.cpp
        Source/NoteTransformer.h
        Source/NoteVibrato.cpp
        Source/NoteVibrato.h
        Source/OSCOutput.cpp
        Source/OSCOutput.h
        Source/OutputChannel.cpp
        Source/OutputChannel.h
        Source/PanicButton.cpp
        Source/PanicButton.h
        Source/Panner.cpp
        Source/Panner.h
        Source/PitchBender.cpp
        Source/PitchBender.h
        Source/PitchChorus.cpp
        Source/PitchChorus.h
        Source/PitchDive.cpp
        Source/PitchDive.h
        Source/PitchPanner.cpp
        Source/PitchPanner.h
        Source/PitchRemap.cpp
        Source/PitchRemap.h
        Source/PitchSetter.cpp
        Source/PitchSetter.h
        Source/PitchToCV.cpp
        Source/PitchToCV.h
        Source/PitchToSpeed.cpp
        Source/PitchToSpeed.h
        Source/PlaySequencer.cpp
        Source/PlaySequencer.h
        Source/Polyrhythms.cpp
        Source/Polyrhythms.h
        Source/Prefab.cpp
        Source/Prefab.h
        Source/Presets.cpp
        Source/Presets.h
        Source/Pressure.cpp
        Source/Pressure.h
        Source/PressureToCV.cpp
        Source/PressureToCV.h
        Source/PressureToModwheel.cpp
        Source/PressureToModwheel.h
        Source/PressureToVibrato.cpp
        Source/PressureToVibrato.h
        Source/PreviousNote.cpp
        Source/PreviousNote.h
        Source/Producer.cpp
        Source/Producer.h
        Source/PulseButton.cpp
        Source/PulseButton.h
        Source/PulseChance.cpp
        Source/PulseChance.h
        Source/PulseDelayer.cpp
        Source/PulseDelayer.h
        Source/PulseGate.cpp
        Source/PulseGate.h
        Source/PulseHocket.cpp
        Source/PulseHocket.h
        Source/Pulser.cpp
        Source/Pulser.h
        Source/PulseSequence.cpp
        Source/PulseSequence.h
        Source/PulseTrain.cpp
        Source/PulseTrain.h
        Source/Push2Control.cpp
        Source/Push2Control.h
        Source/QuickSpawnMenu.cpp
        Source/QuickSpawnMenu.h
        Source/RadioSequencer.cpp
        Source/RadioSequencer.h
        Source/Ramper.cpp
        Source/Ramper.h
        Source/RandomNoteGenerator.cpp
        Source/RandomNoteGenerator.h
        Source/Razor.cpp
        Source/Razor.h
        Source/Rewriter.cpp
        Source/Rewriter.h
        Source/RingModulator.cpp
        Source/RingModulator.h
        Source/SampleBrowser.cpp
        Source/SampleBrowser.h
        Source/SampleCanvas.cpp
        Source/SampleCanvas.h
        Source/SampleCapturer.cpp
        Source/SampleCapturer.h
        Source/SampleFinder.cpp
        Source/SampleFinder.h
        Source/SampleLayerer.cpp
        Source/SampleLayerer.h
        Source/SamplePlayer.cpp
        Source/SamplePlayer.h
        Source/Sampler.cpp
        Source/Sampler.h
        Source/SamplerGrid.cpp
        Source/SamplerGrid.h
        Source/Scale.cpp
        Source/Scale.h
        Source/ScaleDegree.cpp
        Source/ScaleDegree.h
        Source/ScaleDetect.cpp
        Source/ScaleDetect.h
        Source/ScriptModule.cpp
        Source/ScriptModule.h
        Source/ScriptModule_PythonInterface.i
        Source/ScriptStatus.cpp
        Source/ScriptStatus.h
        Source/SeaOfGrain.cpp
        Source/SeaOfGrain.h
        Source/Selector.cpp
        Source/Selector.h
        Source/SignalClamp.cpp
        Source/SignalClamp.h
        Source/SignalGenerator.cpp
        Source/SignalGenerator.h
        Source/SingleOscillator.cpp
        Source/SingleOscillator.h
        Source/SliderSequencer.cpp
        Source/SliderSequencer.h
        Source/SlowLayers.cpp
        Source/SlowLayers.h
        Source/SpectralDisplay.cpp
        Source/SpectralDisplay.h
        Source/Splitter.cpp
        Source/Splitter.h
        Source/StepSequencer.cpp
        Source/StepSequencer.h
        Source/StutterControl.cpp
        Source/StutterControl.h
        Source/SustainPedal.cpp
        Source/SustainPedal.h
        Source/TakeRecorder.cpp
        Source/TakeRecorder.h
        Source/TimelineControl.cpp
        Source/TimelineControl.h
        Source/TimerDisplay.cpp
        Source/TimerDisplay.h
        Source/TitleBar.cpp
        Source/TitleBar.h
        Source/Transport.cpp
        Source/Transport.h
        Source/TransposeFrom.cpp
        Source/TransposeFrom.h
        Source/UnstableModWheel.cpp
        Source/UnstableModWheel.h
        Source/UnstablePitch.cpp
        Source/UnstablePitch.h
        Source/UnstablePressure.cpp
        Source/UnstablePressure.h
        Source/UserPrefsEditor.cpp
        Source/UserPrefsEditor.h
        Source/ValueSetter.cpp
        Source/ValueSetter.h
        Source/ValueStream.cpp
        Source/ValueStream.h
        Source/VelocityScaler.cpp
        Source/VelocityScaler.h
        Source/VelocitySetter.cpp
        Source/VelocitySetter.h
        Source/VelocityStepSequencer.cpp
        Source/VelocityStepSequencer.h
        Source/VelocityToCV.cpp
        Source/VelocityToCV.h
        Source/VinylTempoControl.cpp
        Source/VinylTempoControl.h
        Source/Vocoder.cpp
        Source/Vocoder.h
        Source/VocoderCarrierInput.cpp
        Source/VocoderCarrierInput.h
        Source/VolcaBeatsControl.cpp
        Source/VolcaBeatsControl.h
        Source/VSTPlugin.cpp
        Source/VSTPlugin.h
        Source/WaveformViewer.cpp
        Source/WaveformViewer.h
        Source/Waveshaper.cpp
        Source/Waveshaper.h
        Source/WhiteKeys.cpp
        Source/WhiteKeys.h
        Source/CodeEntry.cpp
        Source/CodeEntry.h
        Source/UIControlMacros.h
        Source/ClickButton.cpp
        Source/ClickButton.h
        Source/RadioButton.cpp
        Source/RadioButton.h
        Source/DropdownList.cpp
        Source/DropdownList.h
        Source/Slider.cpp
        Source/Slider.h
        Source/Checkbox.cpp
        Source/Checkbox.h
        Source/TextEntry.cpp
        Source/TextEntry.h
        Source/IUIControl.cpp
        Source/IUIControl.h
        Source/ADSR.cpp
        Source/ADSR.h
        Source/ADSRDisplay.cpp
        Source/ADSRDisplay.h
        Source/ArrangementController.cpp
        Source/ArrangementController.h
        Source/Bespoke_Platform.cpp
        Source/BiquadFilter.cpp
        Source/BiquadFilter.h
        Source/Canvas.cpp
        Source/Canvas.h
        Source/CanvasControls.cpp
        Source/CanvasControls.h
        Source/CanvasElement.cpp
        Source/CanvasElement.h
        Source/CanvasScrollbar.cpp
        Source/CanvasScrollbar.h
        Source/CanvasTimeline.cpp
        Source/CanvasTimeline.h
        Source/ChannelBuffer.cpp
        Source/ChannelBuffer.h
        Source/Chord.cpp
        Source/Chord.h
        Source/ChordDatabase.cpp
        Source/ChordDatabase.h
        Source/Curve.cpp
        Source/Curve.h
        Source/EffectFactory.cpp
        Source/EffectFactory.h
        Source/EnvelopeEditor.cpp
        Source/EnvelopeEditor.h
        Source/EnvOscillator.cpp
        Source/EnvOscillator.h
        Source/FFT.cpp
        Source/FFT.h
        Source/FileStream.cpp
        Source/FileStream.h
        Source/FillSaveDropdown.h
        Source/FilterButterworth24db.cpp
        Source/FilterButterworth24db.h
        Source/FilterViz.cpp
        Source/FilterViz.h
        Source/FloatSliderLFOControl.cpp
        Source/FloatSliderLFOControl.h
        Source/FMVoice.cpp
        Source/FMVoice.h
        Source/Granulator.cpp
        Source/Granulator.h
        Source/IAudioEffect.h
        Source/IAudioPoller.h
        Source/IAudioProcessor.cpp
        Source/IAudioProcessor.h
        Source/IAudioReceiver.cpp
        Source/IAudioReceiver.h
        Source/IAudioSource.cpp
        Source/IAudioSource.h
        Source/IClickable.cpp
        Source/IClickable.h
        Source/IDrawableModule.cpp
        Source/IDrawableModule.h
        Source/IMidiVoice.h
        Source/IModulator.cpp
        Source/IModulator.h
        Source/INonstandardController.h
        Source/INoteReceiver.cpp
        Source/INoteReceiver.h
        Source/INoteSource.cpp
        Source/INoteSource.h
        Source/IPatchable.h
        Source/IPollable.h
        Source/IPulseReceiver.cpp
        Source/IPulseReceiver.h
        Source/IVoiceParams.h
        Source/JumpBlender.cpp
        Source/JumpBlender.h
        Source/KarplusStrongVoice.cpp
        Source/KarplusStrongVoice.h
        Source/LaunchpadInterpreter.cpp
        Source/LaunchpadInterpreter.h
        Source/LFO.cpp
        Source/LFO.h
        Source/LinkwitzRileyFilter.cpp
        Source/LinkwitzRileyFilter.h
        Source/LocationZoomer.cpp
        Source/LocationZoomer.h
        Source/M185Sequencer.cpp
        Source/M185Sequencer.h
        Source/Main.cpp
        Source/MainComponent.cpp
        Source/MathUtils.cpp
        Source/MathUtils.h
        Source/MidiDevice.cpp
        Source/MidiDevice.h
        Source/MidiReader.cpp
        Source/MidiReader.h
        Source/ModularSynth.cpp
        Source/ModularSynth.h
        Source/ModulationChain.cpp
        Source/ModulationChain.h
        Source/ModuleContainer.cpp
        Source/ModuleContainer.h
        Source/ModuleFactory.cpp
        Source/ModuleFactory.h
        Source/ModuleSaveData.cpp
        Source/ModuleSaveData.h
        Source/Monome.cpp
        Source/Monome.h
        Source/MultiBandTracker.cpp
        Source/MultiBandTracker.h
        Source/NamedMutex.cpp
        Source/NamedMutex.h
        Source/NoteEffectBase.h
        Source/ofxJSONElement.cpp
        Source/ofxJSONElement.h
        Source/OpenFrameworksPort.cpp
        Source/OpenFrameworksPort.h
        Source/OscController.cpp
        Source/OscController.h
        Source/Oscillator.cpp
        Source/Oscillator.h
        Source/PatchCable.cpp
        Source/PatchCable.h
        Source/PatchCableSource.cpp
        Source/PatchCableSource.h
        Source/PeakTracker.cpp
        Source/PeakTracker.h
        Source/PerformanceTimer.cpp
        Source/PerformanceTimer.h
        Source/PitchDetector.cpp
        Source/PitchDetector.h
        Source/PitchShifter.cpp
        Source/PitchShifter.h
        Source/PolyphonyMgr.cpp
        Source/PolyphonyMgr.h
        Source/Profiler.cpp
        Source/Profiler.h
        Source/Ramp.cpp
        Source/Ramp.h
        Source/RollingBuffer.cpp
        Source/RollingBuffer.h
        Source/Sample.cpp
        Source/Sample.h
        Source/SampleDrawer.cpp
        Source/SampleDrawer.h
        Source/SampleVoice.cpp
        Source/SampleVoice.h
        Source/SingleOscillatorVoice.cpp
        Source/SingleOscillatorVoice.h
        Source/SpaceMouseControl.cpp
        Source/SpaceMouseControl.h
        Source/SynthGlobals.cpp
        Source/SynthGlobals.h
        Source/TriggerDetector.cpp
        Source/TriggerDetector.h
        Source/UIGrid.cpp
        Source/UIGrid.h
        Source/UserData.cpp
        Source/UserData.h
        Source/VSTPlayhead.cpp
        Source/VSTPlayhead.h
        Source/VSTWindow.cpp
        Source/VSTWindow.h
        )

juce_add_gui_app(BespokeSynth PRODUCT_NAME BespokeSynth)
juce_generate_juce_header(BespokeSynth)
target_sources(BespokeSynth PRIVATE ${SOURCE_LIST})
target_include_directories(BespokeSynth PRIVATE
        Source/json/include
        Source/glew/include
        Source/push2
        Source/push2/libusb
        Source/push2/modules/libusb)

target_compile_definitions(BespokeSynth PUBLIC
        JUCE_MODAL_LOOPS_PERMITTED=1
  JUCE_ALLOW_STATIC_NULL_VARIABLES=0
  JUCE_STRICT_REFCOUNTEDPOINTER=1

  JUCE_VST3_CAN_REPLACE_VST2=0
  JUCE_USE_CURL=0
  JUCE_WEB_BROWSER=0
  JUCE_USE_CAMERA=disabled

  JUCE_DISPLAY_SPLASH_SCREEN=0
  JUCE_REPORT_APP_USAGE=0


  JUCE_COREGRAPHICS_DRAW_ASYNC=1

  JUCE_ALSA=1
  JUCE_JACK=1

  JUCE_WASAPI=1
  JUCE_DIRECTSOUND=1

  JUCE_CATCH_UNHANDLED_EXCEPTIONS=$<CONFIG:Debug>
)

if (APPLE)
target_compile_definitions(BespokeSynth PRIVATE
     BESPOKE_MAC=1
)
target_sources(BespokeSynth PRIVATE
        Source/CFMessaging/Bespoke_CFMessaging.cpp
        Source/CFMessaging/KontrolKommunicator.cpp
        Source/CFMessaging/KontrolKommunicator.h
        Source/CFMessaging/ListenPort.cpp
        Source/CFMessaging/ListenPort.h
        Source/CFMessaging/NIMessage.cpp
        Source/CFMessaging/NIMessage.h
        Source/CFMessaging/SendPort.cpp
        Source/CFMessaging/SendPort.h
        Source/psmove/hid.c
        Source/psmove/hidapi.h
        Source/psmove/Bespoke_PSMove.c
        Source/psmove/psmove.c
        Source/psmove/psmove.h
        Source/psmove/PSMoveMgr.cpp
        Source/psmove/PSMoveMgr.h
        Source/KompleteKontrol.cpp
        Source/KompleteKontrol.h
        Source/PSMoveController.cpp
        Source/PSMoveController.h
)
# THIS IS A HACK and should use pybind cmakelists
target_link_libraries(BespokeSynth PRIVATE
	"-framework /usr/local/Cellar/python\@3.9/3.9.6/Frameworks/Python.framework"
)
elseif(WIN32)
target_compile_definitions(BespokeSynth PRIVATE
     BESPOKE_WINDOWS=1
)
else()
target_compile_definitions(BespokeSynth PRIVATE
     BESPOKE_LINUX=1
     GLEW_STATIC=0
     GL_GLEXT_PROTOTYPES=0
)

# THIS IS A HACK and the right thing is to use the pybind cmakelists
target_include_directories(BespokeSynth PUBLIC
    /usr/include/python3.8
)
target_link_libraries(BespokeSynth PUBLIC /usr/lib/x86_64-linux-gnu/libpython3.8.so /usr/lib/x86_64-linux-gnu/libusb-1.0.so.0 )

endif()

target_link_libraries(BespokeSynth PRIVATE
        juce::juce_audio_basics
        juce::juce_audio_devices
        juce::juce_audio_formats
        juce::juce_audio_processors
        juce::juce_opengl
        juce::juce_osc
        juce::juce_gui_basics)
